--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: CS-671 Deep Learning and its Applications
 description: >- # this means to ignore newlines until "baseurl:"
   Here we maintain all assignments for this course CS-671 (Deep Learning and its Applications) at IIT Mandi.
 baseurl: "/CS-671" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://akhileshdevrari.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  akhileshdevrari
 
