--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "/CS-671" # the subpath of your site, e.g. /blog
 url: "https://akhileshdevrari.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  akhileshdevrari
+layouts_dir: _layouts
 
 # Build settings
 markdown: kramdown
